--- a/AdressListWithSwift3/Controller/My/Setting/ModifyPasswordController.xib
+++ b/AdressListWithSwift3/Controller/My/Setting/ModifyPasswordController.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11535.1" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11523"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,21 +22,53 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_bg" translatesAutoresizingMaskIntoConstraints="NO" id="K7E-9O-izV"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_bg" translatesAutoresizingMaskIntoConstraints="NO" id="K7E-9O-izV">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                </imageView>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Yk-Y4-h1s">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Nbv-R1-Vt6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZuF-mU-Y3D">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="u8X-YL-mrR">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <vibrancyEffect>
+                                    <blurEffect style="light"/>
+                                </vibrancyEffect>
+                            </visualEffectView>
+                        </subviews>
+                    </view>
+                    <blurEffect style="light"/>
+                </visualEffectView>
+                <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo1" translatesAutoresizingMaskIntoConstraints="NO" id="1Cn-KJ-bgg">
+                    <rect key="frame" x="175" y="587" width="200" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="1Cn-KJ-bgg" secondAttribute="height" multiplier="5:1" id="dro-Gc-MrM"/>
+                        <constraint firstAttribute="width" constant="200" id="thk-Vu-UFm"/>
+                    </constraints>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nSb-JW-M7x" userLabel="oldV">
+                    <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="旧密码：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vac-SC-25t">
+                            <rect key="frame" x="24" y="15.5" width="65.5" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入内容" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9cg-Ks-fTP">
+                            <rect key="frame" x="99.5" y="10" width="251.5" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
-                    <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="9cg-Ks-fTP" firstAttribute="leading" secondItem="vac-SC-25t" secondAttribute="trailing" constant="10" id="AFx-oH-wT4"/>
                         <constraint firstItem="vac-SC-25t" firstAttribute="leading" secondItem="nSb-JW-M7x" secondAttribute="leading" constant="24" id="NBZ-9c-Tx3"/>
@@ -43,19 +79,21 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2vV-6h-60R" userLabel="newV">
+                    <rect key="frame" x="0.0" y="90" width="375" height="50"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新密码：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C31-bm-IqB">
+                            <rect key="frame" x="24" y="15.5" width="65.5" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入内容" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TnF-il-EUp">
+                            <rect key="frame" x="99.5" y="10" width="251.5" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
-                    <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="C31-bm-IqB" firstAttribute="leading" secondItem="2vV-6h-60R" secondAttribute="leading" constant="24" id="BI3-wL-hJz"/>
                         <constraint firstItem="C31-bm-IqB" firstAttribute="centerY" secondItem="2vV-6h-60R" secondAttribute="centerY" id="eCd-Ug-C5H"/>
@@ -70,11 +108,20 @@
             <constraints>
                 <constraint firstItem="nSb-JW-M7x" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="0Sc-Eu-7qX"/>
                 <constraint firstAttribute="trailing" secondItem="nSb-JW-M7x" secondAttribute="trailing" id="2ji-8H-FTZ"/>
+                <constraint firstItem="1Cn-KJ-bgg" firstAttribute="width" secondItem="1Cn-KJ-bgg" secondAttribute="height" multiplier="5:1" id="6SO-kF-Zxf"/>
                 <constraint firstItem="2vV-6h-60R" firstAttribute="centerX" secondItem="nSb-JW-M7x" secondAttribute="centerX" id="6SO-qv-m3d"/>
+                <constraint firstItem="1Yk-Y4-h1s" firstAttribute="centerY" secondItem="K7E-9O-izV" secondAttribute="centerY" id="AX3-rv-W9p"/>
+                <constraint firstItem="1Cn-KJ-bgg" firstAttribute="width" secondItem="1Cn-KJ-bgg" secondAttribute="height" multiplier="5:1" id="AcC-oi-8Am"/>
                 <constraint firstItem="nSb-JW-M7x" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Agh-Ze-42F"/>
+                <constraint firstItem="1Yk-Y4-h1s" firstAttribute="width" secondItem="K7E-9O-izV" secondAttribute="width" id="GIu-JC-QCr"/>
+                <constraint firstItem="1Cn-KJ-bgg" firstAttribute="width" secondItem="1Cn-KJ-bgg" secondAttribute="height" multiplier="5:1" id="LSn-eN-pTT"/>
+                <constraint firstItem="1Yk-Y4-h1s" firstAttribute="centerX" secondItem="K7E-9O-izV" secondAttribute="centerX" id="Svd-54-DNa"/>
                 <constraint firstAttribute="trailing" secondItem="K7E-9O-izV" secondAttribute="trailing" id="W0F-vf-K6n"/>
                 <constraint firstAttribute="bottom" secondItem="K7E-9O-izV" secondAttribute="bottom" id="ZEO-1c-9vp"/>
                 <constraint firstItem="2vV-6h-60R" firstAttribute="top" secondItem="nSb-JW-M7x" secondAttribute="bottom" constant="20" id="bhI-Za-ECn"/>
+                <constraint firstAttribute="trailing" secondItem="1Cn-KJ-bgg" secondAttribute="trailing" id="dbm-Pl-AZm"/>
+                <constraint firstAttribute="bottom" secondItem="1Cn-KJ-bgg" secondAttribute="bottom" constant="40" id="dxd-zv-ysS"/>
+                <constraint firstItem="1Yk-Y4-h1s" firstAttribute="height" secondItem="K7E-9O-izV" secondAttribute="height" id="fIp-Rd-QXB"/>
                 <constraint firstItem="2vV-6h-60R" firstAttribute="width" secondItem="nSb-JW-M7x" secondAttribute="width" id="tYU-2h-8Od"/>
                 <constraint firstItem="K7E-9O-izV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="tar-7H-7pP"/>
                 <constraint firstItem="K7E-9O-izV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="vvM-OV-to3"/>
@@ -82,6 +129,7 @@
         </view>
     </objects>
     <resources>
+        <image name="logo1" width="500" height="100"/>
         <image name="my_bg" width="700" height="980"/>
     </resources>
 </document>
