--- a/AdressListWithSwift3/View/AdressListCell/AdressListCell.xib
+++ b/AdressListWithSwift3/View/AdressListCell/AdressListCell.xib
@@ -1,38 +1,62 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11535.1" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11523"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AdressListCell" customModule="AdressListWithSwift3" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="丫头" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m4Q-gJ-t2L">
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="69.5" y="21" width="31" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="leaved" translatesAutoresizingMaskIntoConstraints="NO" id="6DV-bd-xOo">
+                        <rect key="frame" x="240" y="20" width="56" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="6DV-bd-xOo" secondAttribute="height" multiplier="14:5" id="bzc-nA-XHo"/>
                             <constraint firstAttribute="height" constant="20" id="zOI-lq-dGt"/>
                         </constraints>
                     </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="head" translatesAutoresizingMaskIntoConstraints="NO" id="fOA-n1-5KJ">
+                        <rect key="frame" x="12" y="5" width="47.5" height="48"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="fOA-n1-5KJ" secondAttribute="height" id="aBX-iV-Fld"/>
+                        </constraints>
+                    </imageView>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phone" translatesAutoresizingMaskIntoConstraints="NO" id="0Wy-NQ-MBh">
+                        <rect key="frame" x="285.5" y="18" width="22.5" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="TMc-RX-wW5"/>
+                            <constraint firstAttribute="width" secondItem="0Wy-NQ-MBh" secondAttribute="height" multiplier="192:210" id="t2e-ic-kyp"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="6DV-bd-xOo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="7Ce-vc-qcc"/>
+                    <constraint firstAttribute="trailing" secondItem="0Wy-NQ-MBh" secondAttribute="trailing" constant="12" id="F26-xm-RYh"/>
                     <constraint firstItem="m4Q-gJ-t2L" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Gh6-UR-FXT"/>
-                    <constraint firstItem="m4Q-gJ-t2L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="UBS-AP-YUf"/>
+                    <constraint firstItem="fOA-n1-5KJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="NA6-w7-ldl"/>
+                    <constraint firstItem="fOA-n1-5KJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ZSM-dB-o6x"/>
+                    <constraint firstItem="fOA-n1-5KJ" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.8:1" id="bcg-cS-VKT"/>
                     <constraint firstAttribute="trailing" secondItem="6DV-bd-xOo" secondAttribute="trailing" constant="24" id="eNF-8N-PXT"/>
+                    <constraint firstItem="0Wy-NQ-MBh" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="pI1-5A-26t"/>
+                    <constraint firstItem="m4Q-gJ-t2L" firstAttribute="leading" secondItem="fOA-n1-5KJ" secondAttribute="trailing" constant="10" id="qHE-MZ-f56"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -43,6 +67,8 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="head" width="87" height="87"/>
         <image name="leaved" width="56" height="20"/>
+        <image name="phone" width="192" height="220"/>
     </resources>
 </document>
