--- a/AdressListWithSwift3/View/LeaveCell/LeaveCell.xib
+++ b/AdressListWithSwift3/View/LeaveCell/LeaveCell.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11535.1" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11523"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,16 +21,19 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="head" translatesAutoresizingMaskIntoConstraints="NO" id="7RG-74-HDX">
+                        <rect key="frame" x="17.5" y="6.5" width="65" height="65"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="7RG-74-HDX" secondAttribute="height" id="ZPd-gJ-daG"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BJe-1i-9DK">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BJe-1i-9DK">
+                        <rect key="frame" x="6" y="76.5" width="88" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="leaved" translatesAutoresizingMaskIntoConstraints="NO" id="3g6-mh-aJ8">
+                        <rect key="frame" x="22" y="99.5" width="56" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="h0o-QW-FCw"/>
                             <constraint firstAttribute="width" secondItem="3g6-mh-aJ8" secondAttribute="height" multiplier="14:5" id="wmc-k7-K8J"/>
@@ -35,19 +41,20 @@
                     </imageView>
                 </subviews>
             </view>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="BJe-1i-9DK" firstAttribute="top" secondItem="7RG-74-HDX" secondAttribute="bottom" constant="5" id="8Zd-1p-B3o"/>
                 <constraint firstItem="3g6-mh-aJ8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="FY7-w1-mGX"/>
+                <constraint firstAttribute="trailing" secondItem="BJe-1i-9DK" secondAttribute="trailing" constant="6" id="I4n-fI-0yY"/>
+                <constraint firstItem="BJe-1i-9DK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="RqI-cZ-hA6"/>
                 <constraint firstItem="7RG-74-HDX" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" multiplier="0.6" id="TsN-lN-pmP"/>
                 <constraint firstItem="3g6-mh-aJ8" firstAttribute="top" secondItem="BJe-1i-9DK" secondAttribute="bottom" constant="5" id="ehX-8R-MYu"/>
                 <constraint firstItem="7RG-74-HDX" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.5" id="fZy-Ru-sxj"/>
-                <constraint firstItem="BJe-1i-9DK" firstAttribute="centerX" secondItem="7RG-74-HDX" secondAttribute="centerX" id="w5v-3h-4xn"/>
                 <constraint firstItem="7RG-74-HDX" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="waw-J6-PB5"/>
             </constraints>
             <connections>
                 <outlet property="flagImg" destination="3g6-mh-aJ8" id="5VA-cr-1t0"/>
                 <outlet property="headImg" destination="7RG-74-HDX" id="guO-Vu-O4i"/>
+                <outlet property="headImgHeight" destination="fZy-Ru-sxj" id="DBY-aS-DpK"/>
                 <outlet property="nameLab" destination="BJe-1i-9DK" id="NPC-Gy-xKT"/>
             </connections>
         </collectionViewCell>
