--- a/AdressListWithSwift3/View/LeaveRecordCell/LeaveRecordCell.xib
+++ b/AdressListWithSwift3/View/LeaveRecordCell/LeaveRecordCell.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11535.1" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11523"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,28 +17,57 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="375" height="149"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="149"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_bg" translatesAutoresizingMaskIntoConstraints="NO" id="zR5-Yk-rTb">
+                        <rect key="frame" x="-0.5" y="-1" width="375" height="150"/>
+                    </imageView>
+                    <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a8u-Wt-2l5">
+                        <rect key="frame" x="-0.5" y="-1" width="375" height="150"/>
+                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="65b-nf-oJW">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sXy-c0-AEZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="VdE-4w-j3E">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    </view>
+                                    <vibrancyEffect>
+                                        <blurEffect style="light"/>
+                                    </vibrancyEffect>
+                                </visualEffectView>
+                            </subviews>
+                        </view>
+                        <blurEffect style="light"/>
+                    </visualEffectView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aLF-WT-JxC" userLabel="nameV">
+                        <rect key="frame" x="24" y="0.0" width="327" height="37.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Lx-2p-hGa">
+                                <rect key="frame" x="0.0" y="10" width="43" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="leaved" translatesAutoresizingMaskIntoConstraints="NO" id="bGT-eb-edb">
+                                <rect key="frame" x="244" y="8.5" width="56" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="Elq-rB-vQ3"/>
                                     <constraint firstAttribute="width" secondItem="bGT-eb-edb" secondAttribute="height" multiplier="14:5" id="hzF-8b-UnW"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iT6-Ke-pYm" userLabel="nameL">
+                                <rect key="frame" x="53" y="18.5" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZfK-ww-rIH" userLabel="deleteBtn">
+                                <rect key="frame" x="315" y="11" width="12" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="ZfK-ww-rIH" secondAttribute="height" multiplier="12:15" id="5sk-8s-3DE"/>
                                     <constraint firstAttribute="width" constant="12" id="UJb-wL-0E4"/>
@@ -46,7 +78,6 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="iT6-Ke-pYm" firstAttribute="centerY" secondItem="1Lx-2p-hGa" secondAttribute="centerY" id="B5U-uk-Wjh"/>
                             <constraint firstItem="1Lx-2p-hGa" firstAttribute="centerY" secondItem="aLF-WT-JxC" secondAttribute="centerY" id="BPW-V1-V7E"/>
@@ -59,19 +90,21 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wuB-fk-1H5" userLabel="startV">
+                        <rect key="frame" x="24" y="37.5" width="327" height="37.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="开始时间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZO-ol-QFe" userLabel="start">
+                                <rect key="frame" x="0.0" y="10" width="71.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DaJ-1w-rId" userLabel="startDate">
+                                <rect key="frame" x="327" y="18.5" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="qZO-ol-QFe" firstAttribute="leading" secondItem="wuB-fk-1H5" secondAttribute="leading" id="Zuz-O6-Gv3"/>
                             <constraint firstAttribute="trailing" secondItem="DaJ-1w-rId" secondAttribute="trailing" id="b7J-Wl-x1a"/>
@@ -80,19 +113,21 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cr9-bR-Gl8" userLabel="endV">
+                        <rect key="frame" x="24" y="75" width="327" height="37"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="结束时间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Xx-Vh-UeR" userLabel="end">
+                                <rect key="frame" x="0.0" y="10" width="71.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mv2-fO-hDy" userLabel="endDate">
+                                <rect key="frame" x="327" y="18.5" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="4Xx-Vh-UeR" firstAttribute="centerY" secondItem="Cr9-bR-Gl8" secondAttribute="centerY" id="QhT-8x-y02"/>
                             <constraint firstItem="4Xx-Vh-UeR" firstAttribute="leading" secondItem="Cr9-bR-Gl8" secondAttribute="leading" id="bkS-eQ-B81"/>
@@ -101,19 +136,21 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4m-ZN-ihJ" userLabel="reasonV">
+                        <rect key="frame" x="24" y="112" width="327" height="37.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请假原因：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgf-1A-V1s" userLabel="end">
+                                <rect key="frame" x="0.0" y="10.5" width="71.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ygg-8d-7mv" userLabel="end">
+                                <rect key="frame" x="327" y="19" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Ygg-8d-7mv" secondAttribute="trailing" id="Gqs-lC-tRu"/>
                             <constraint firstItem="rgf-1A-V1s" firstAttribute="leading" secondItem="y4m-ZN-ihJ" secondAttribute="leading" id="Q5F-Bh-9Ee"/>
@@ -125,19 +162,27 @@
                 <constraints>
                     <constraint firstItem="y4m-ZN-ihJ" firstAttribute="top" secondItem="Cr9-bR-Gl8" secondAttribute="bottom" id="1dw-hO-3rk"/>
                     <constraint firstItem="aLF-WT-JxC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="2ly-Kd-Qux"/>
+                    <constraint firstItem="a8u-Wt-2l5" firstAttribute="height" secondItem="zR5-Yk-rTb" secondAttribute="height" id="3LD-yN-tpB"/>
                     <constraint firstItem="aLF-WT-JxC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4CY-lJ-gMw"/>
                     <constraint firstItem="y4m-ZN-ihJ" firstAttribute="centerX" secondItem="Cr9-bR-Gl8" secondAttribute="centerX" id="4mv-Do-q0R"/>
+                    <constraint firstItem="zR5-Yk-rTb" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" id="7Od-qH-0NZ"/>
+                    <constraint firstItem="a8u-Wt-2l5" firstAttribute="centerX" secondItem="zR5-Yk-rTb" secondAttribute="centerX" id="9xx-6F-VRd"/>
                     <constraint firstItem="Cr9-bR-Gl8" firstAttribute="centerX" secondItem="wuB-fk-1H5" secondAttribute="centerX" id="Dcb-No-Bpf"/>
                     <constraint firstItem="aLF-WT-JxC" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.25" id="IT5-tP-Khz"/>
                     <constraint firstItem="Cr9-bR-Gl8" firstAttribute="top" secondItem="wuB-fk-1H5" secondAttribute="bottom" id="P5g-5x-8YP"/>
                     <constraint firstItem="Cr9-bR-Gl8" firstAttribute="width" secondItem="wuB-fk-1H5" secondAttribute="width" id="PF8-kt-uTP"/>
+                    <constraint firstItem="zR5-Yk-rTb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="X2q-j3-cyb"/>
+                    <constraint firstItem="zR5-Yk-rTb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Y3l-sa-7kA"/>
                     <constraint firstItem="wuB-fk-1H5" firstAttribute="top" secondItem="aLF-WT-JxC" secondAttribute="bottom" id="adD-9f-SZc"/>
+                    <constraint firstItem="a8u-Wt-2l5" firstAttribute="centerY" secondItem="zR5-Yk-rTb" secondAttribute="centerY" id="cNJ-8G-s29"/>
                     <constraint firstItem="y4m-ZN-ihJ" firstAttribute="width" secondItem="Cr9-bR-Gl8" secondAttribute="width" id="d15-yL-CBE"/>
                     <constraint firstItem="wuB-fk-1H5" firstAttribute="centerX" secondItem="aLF-WT-JxC" secondAttribute="centerX" id="e1z-cj-Hwr"/>
                     <constraint firstItem="wuB-fk-1H5" firstAttribute="width" secondItem="aLF-WT-JxC" secondAttribute="width" id="eak-NJ-rXU"/>
                     <constraint firstItem="y4m-ZN-ihJ" firstAttribute="height" secondItem="Cr9-bR-Gl8" secondAttribute="height" id="lhg-8C-fmz"/>
                     <constraint firstAttribute="trailing" secondItem="aLF-WT-JxC" secondAttribute="trailing" constant="24" id="mk3-P6-psA"/>
                     <constraint firstItem="Cr9-bR-Gl8" firstAttribute="height" secondItem="wuB-fk-1H5" secondAttribute="height" id="mzj-ES-x5o"/>
+                    <constraint firstItem="zR5-Yk-rTb" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="tQm-uZ-c2X"/>
+                    <constraint firstItem="a8u-Wt-2l5" firstAttribute="width" secondItem="zR5-Yk-rTb" secondAttribute="width" id="yrN-qu-WuT"/>
                     <constraint firstItem="wuB-fk-1H5" firstAttribute="height" secondItem="aLF-WT-JxC" secondAttribute="height" id="yyE-oP-cIJ"/>
                 </constraints>
             </tableViewCellContentView>
@@ -153,5 +198,6 @@
     <resources>
         <image name="delete" width="19" height="20"/>
         <image name="leaved" width="56" height="20"/>
+        <image name="my_bg" width="700" height="980"/>
     </resources>
 </document>
